# Prospa3DMRIVisualiser

./: .gitignore  README.md  imgui.ini  pyproject.toml
pyMRI/: __main__.py  _distutil_workaround.py  config.py  data_loading.py  mri.py
pyMRI/gui/: colouring.py  gui.py  menu.py  processing.py  tab.py  warning.py
pyMRI/gui/menu/: adjust.py  colouring.py  load.py  menu.py  processing.py  style.py  tab.py  transform.py
pyMRI/gui/popups/: popup.py
pyMRI/loading/: __init__.py  filepicker.py  generic.py  prospa.py
pyMRI/processing/: __init__.py  adjust.py  data.py  fourier.py  loading.py  processor.py  step.py  style.py
pyMRI/rendering/: camera.py  fly_around_grip.py  voxel.py
pyMRI/rendering/shaders/: fullscreen_dda3d_fs.glsl  fullscreen_dda3d_vs.glsl
pyMRI/windowing/: __init__.py  window.py
tests/loading/: test_plyer_filepicker.py
