[project]
name="pyMRI"
description="A visualiser of 3D MRI data"
license = {text = "MIT License"}
readme="README.md"
version="2024.05.17.1"
dependencies=[
    "arcade>=3.0.0.dev27",
    "numpy>=1.26",
    "imgui[pyglet]"
]
requires-python= ">= 3.12"
authors =  [
    {name = "A J Andrews", email = "aand417@aucklanuni.ac.nz"}
]
maintainers = [
    {name = "A J Andrews", email = "aand417@aucklanuni.ac.nz"}
]
